--- a/style.css
+++ b/style.css
@@ -3,3 +3,58 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.cookie-container {
+  background: linear-gradient(260deg, #9b6c50 0%, #4f2626 100%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 320px;
+  width: 100%;
+  height: 160px;
+  border-radius: 1.2rem;
+  padding: 1rem;
+  padding-left: 1.5rem;
+  font-family: "Poppins", sans-serif;
+}
+
+.cookie {
+  margin-right: 1rem;
+  width: 48px;
+  height: 48px;
+  visibility: hidden;
+  overflow: visible;
+}
+
+.text {
+  max-width: 200px;
+  width: 100%;
+  visibility: hidden;
+}
+
+.cookie-title {
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+
+.cookie-subtitle {
+  font-size: 0.7rem;
+  font-weight: 300;
+}
+
+button {
+  border: none;
+  padding: 0.5rem 1rem;
+  color: #4f2626;
+  font-family: inherit;
+  font-size: 0.8rem;
+  font-weight: bold;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  margin-top: 8px;
+}
